<resources>
    <string name="app_name">My Application</string>
    <string name="checkout">FINISH ORDER</string>
    <string name="pound">£</string>
    <string name="empty_order_string">Your order is empty</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sing_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_login">Please login</string>
    <string name="welcome">Welcome</string>
    <string name="app_title">PizzaDemo</string>
    <string name="customer_information_heading">Customer information:</string>
    <string name="customer_name">Name:</string>
    <string name="customer_surname">Surname:</string>
    <string name="order_information_heading">Order information:</string>
    <string name="order_type">Order type:</string>
    <string name="customer_phone_number">Phone number:</string>
    <string name="delivery_adress">Delivery address:</string>
    <string name="submit_order_text">Submit Order</string>
    <string name="order_cost">Order Cost:</string>
    <string name="order_list_heading">Your Order:</string>
    <string name="remove_button_text">Remove</string>
    <string name="delivery_button_text">Delivery</string>
    <string name="collection_button_text">Collection</string>
    <string name="delivery_type_title">Choose an order type</string>
</resources>
