<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.PreOrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_cream_soda"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@android:color/white"
        android:textSize="46sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_login"
            android:textColor="@android:color/white" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_email_icon_white"
            android:drawableStart="@drawable/ic_email_icon_white"
            android:drawablePadding="5dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"
            android:tooltipText="@string/email_address" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:drawableLeft="@drawable/ic_lock_icon_white"
            android:drawableStart="@drawable/ic_lock_icon_white"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"
            android:tooltipText="@string/password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_button_white"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button_white"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sing_up"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp" />
    </LinearLayout>

</LinearLayout>